# deye

./: CMakeLists.txt  README.md
doc/: adresses.ods  out.json
src/: crc.c  crc.h  main.cpp
